--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My GitHub Page</title>
+    <title>un5eeny0t</title>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page!</h1>
+    <h1>Welcome!</h1>
 </body>
 </html>
