--- a/index.html
+++ b/index.html
@@ -179,11 +179,29 @@
   });
     
     // Fetch repos dynamically
-    fetch("https://api.github.com/users/un5eeny0t/repos?sort=updated")
-      .then(response => response.json())
-      .then(repos => {
-        const container = document.getElementById("repo-list");
-        repos.forEach(repo => {
+//   fetch("https://api.github.com/users/un5eeny0t/repos?sort=updated")
+//     .then(response => response.json())
+//    .then(repos => {
+//       const container = document.getElementById("repo-list");
+//      repos.forEach(repo => {
+//          const card = document.createElement("div");
+//         card.className = "repo-card";
+//          card.innerHTML = `
+//           <h2>${repo.name}</h2>
+//            <p>${repo.description ? repo.description : "No description available."}</p>
+//            <a href="${repo.html_url}" target="_blank">View Repository</a>
+//          `;
+//          container.appendChild(card);
+      // Fetch only specific repos
+  const wantedRepos = ["Cyber-Write-Up-Fetcher", "Geolocation-IP-Filtering"];
+
+  fetch("https://api.github.com/users/un5eeny0t/repos?sort=updated")
+    .then(response => response.json())
+    .then(repos => {
+      const container = document.getElementById("repo-list");
+      repos
+        .filter(repo => wantedRepos.includes(repo.name))
+        .forEach(repo => {
           const card = document.createElement("div");
           card.className = "repo-card";
           card.innerHTML = `
@@ -192,6 +210,9 @@
             <a href="${repo.html_url}" target="_blank">View Repository</a>
           `;
           container.appendChild(card);
+        });
+    });
+
         });
       });
   </script>
