--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
     { text: "Bienvenido", color: "#ffcc00" },        // Spanish - yellow
     { text: "Bienvenue", color: "#ff66ff" },         // French - pink
     { text: "Willkommen", color: "#ff6600" },        // German - orange
-    { text: "ようこそ (Yōkoso)", color: "#00ffff" },  // Japanese - cyan
+    { text: "ようこそ", color: "#00ffff" },  // Japanese - cyan  (Yōkoso)
     { text: "欢迎 (Huānyíng)", color: "#ff3333" },   // Chinese - red
-    { text: "أهلاً وسهلاً (Ahlan wa sahlan)", color: "#ffffff" }, // Arabic - white
-    { text: "Приветствуем (Privetstvuem)", color: "#9966ff" },    // Russian - purple
-    { text: "환영합니다 (Hwanyeonghamnida)", color: "#66ffcc" }   // Korean - mint
+    { text: "أهلاً وسهلاً", color: "#ffffff" }, // Arabic - white (Ahlan wa sahlan)
+    { text: "Приветствуем", color: "#9966ff" },    // Russian - purple  (Privetstvuem)
+    { text: "환영합니다", color: "#66ffcc" }   // Korean - mint  (Hwanyeonghamnida)
   ];
 
   let messageIndex = 0;
